 8. Add captions to images in viewer.
 9. Only show detailed sub-toolbar for online items if also have space for
    image.
10. If using rounded covers then use circles for artist images.
11. Support plural/singular user-defined role names.
12. Fix showing 'composed by', etc., in queue and elsewhere.
13. Fix showing/hiding of 'Play shuffled' action in certain cases.

5.4.4
-----
1. Add 'Show image' to more context menus.
2. Fix add/play and menu icons sometimes showing when they should not.
3. When resolving album favourite resolve artist_id.
4. Fix browsing favourited works albums - thanks to Darrell.
5. Fix blank/empty button in 'Server settings' if LMS is on pCP.
6. Use menu in 'Server settings' toolbar if 3 or more items.
7. Scroll to top when reload random albums/releases.
8. Change default album/release icon to reflect release type support.
9. Fix grid clipping on certain widths.

5.4.3
-----
1. Save settings when change player via menu in player settings dialog.
2. Only fetch list of works if not already showing list of works.
3. Remove role filter when listing album's via artist link.
4. Fix search results sub-title link highlight.
5. Make each artist clickable in album list sub-titles.
6. Use composer as sub-title for Works search results.
7. Fix treeview rendering.
8. Don't exclude current artist from album-subtitle click menu.
9. Type to scroll to genre in advanced search.

5.4.2
-----
 1. Tweak how navigation drawer list is scrolled to ensure current player is
    visible.
 2. Work-around drag highlight sometimes remaining after drop.
 3. Update volume slider collapsing code to handle window controls overlay.
 4. Add Wiim player icon.
 5. If using 18px or more of bottom padding then try to ensure menus do not
    go into padded area.
 6. Adjust sub-toolbar text alignments.
 7. Allow dragging favourites folder even if 'sort favourites' is enabled.
 8. Add custom classical, jazz, and rock radio icons.